--- a/LGPL/CommonSoftware/acserr/.classpath
+++ b/LGPL/CommonSoftware/acserr/.classpath
@@ -3,14 +3,14 @@
 	<classpathentry kind="src" path="ws/src"/>
 	<classpathentry kind="src" path="ws/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry sourcepath="ACSROOT/lib/jACSUtil.jar" kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar" sourcepath="ACSROOT/lib/jACSUtil.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeAlarm.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCORBA.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeMonitor.jar"/>
-	<classpathentry sourcepath="ACSROOT/lib/junit.jar" kind="var" path="ACSROOT/lib/junit.jar"/>
-	<classpathentry sourcepath="ws/lib/acserr.jar" kind="lib" path="ws/lib/acserr.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar" sourcepath="ACSROOT/lib/junit.jar"/>
 	<classpathentry kind="lib" path="ws/lib/acserrTest.jar"/>
 	<classpathentry kind="lib" path="ws/lib/ACSErrTypeTest.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
