missing jars added to run
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@151005 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb/.classpath
+++ b/LGPL/CommonSoftware/cdb/.classpath
@@ -15,5 +15,11 @@
 	<classpathentry kind="var" path="ACSROOT/lib/maci.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/repeatGuard.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar" sourcepath="/ACSROOT/lib/ACSErrTypeCommon.jar"/>
+	<classpathentry kind="var" path="JACORB_HOME/lib/logkit-1.2.jar"/>
+	<classpathentry kind="var" path="JACORB_HOME/lib/avalon-framework-4.1.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
