--- a/LGPL/Kit/acs/include/Makefile_WS.template
+++ b/LGPL/Kit/acs/include/Makefile_WS.template
@@ -1,7 +1,7 @@
 #%# #*******************************************************************************
 #%# # E.S.O. - ACS project
 #%# #
-#%# # "@(#) $Id: Makefile_WS.template,v 1.69 2008/04/04 15:04:45 mpasquat Exp $"
+#%# # "@(#) $Id: Makefile_WS.template,v 1.70 2011/03/30 16:31:03 jagonzal Exp $"
 #%# #
 #%# #      REMARK: This file belongs to the "vltMake" module.
 #%# #
@@ -139,7 +139,9 @@ USER_IDL =
 #
 JARFILES= 
 jjj_DIRS=
-jjj_EXTRAS= 
+jjj_EXTRAS=
+# For expressing dependencies between jarfiles (parallel builds)
+jjj_JLIBS= 
 #
 # java sources in Jarfile on/off
 DEBUG= 
