Add dependency between jcontexmplClient.jar and LampCallback.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@151499 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcontexmpl/src/Makefile
+++ b/LGPL/CommonSoftware/jcontexmpl/src/Makefile
@@ -86,7 +86,7 @@ jcontexmplClient_DIRS = \
 	alma/demo/EventConsumerImpl \
 	alma/acsexmpl/clients
 
-jcontexmplClient_JLIBS= XmlComponent
+jcontexmplClient_JLIBS= XmlComponent LampCallback
 
 DEBUG = on
 #COMPONENT_HELPERS=on
