*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@151537 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcont/.classpath
+++ b/LGPL/CommonSoftware/jcont/.classpath
@@ -40,5 +40,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/lcEngine.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsCallbacksSupport.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/AcsContainerLogLTS.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
