--- a/LGPL/CommonSoftware/acsContainerServices/.classpath
+++ b/LGPL/CommonSoftware/acsContainerServices/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbDAL.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsnc.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="output" path="ws/object/eclipseOut"/>
 </classpath>
