--- a/LGPL/CommonSoftware/acsalarmidl/.classpath
+++ b/LGPL/CommonSoftware/acsalarmidl/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmService.jar"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar" sourcepath="/JACORB_HOME/src"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="output" path="lib"/>
 </classpath>
