*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@152176 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/containerTests/contNcTest/.project
+++ b/LGPL/CommonSoftware/containerTests/contNcTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>contNcTest1</name>
+	<name>ACS_containerTests_contNcTest</name>
 	<comment></comment>
 	<projects>
 	</projects>
