Updated .classpath file to comply with latest ACS libraries
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@152556 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcontnc/.classpath
+++ b/LGPL/CommonSoftware/jcontnc/.classpath
@@ -20,7 +20,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/maciErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acstime.jar"/>
-	<classpathentry kind="lib" path="lib/jcontnctest.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/EventComponent.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsexmplFridge.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3.8.1"/>
@@ -47,5 +46,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeAlarmSourceFactory.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsncSchemaBindings.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logkit.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsCallbacksSupport.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
