--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
@@ -5,7 +5,7 @@
 ## 
 ## European Southern Observatory
 ## A. Caproni 12/02/2009
-## $Id: project.properties,v 1.11 2010/10/29 16:48:18 jschwarz Exp $
+## $Id: project.properties,v 1.12 2011/04/20 17:43:45 jschwarz Exp $
 ##
 #################################################
 
@@ -19,6 +19,7 @@ acs.jars.plugin=alma.acs.rcp.jars
 ## These jars must be found in INTROOT/ACSROOT/JACORB_HOME
 acs.jars.required  = acsalarmSchemaBindings.jar \
  acsASsources.jar \
+ acsCallbacksSupport.jar \
  acscommon.jar \
  acscomponent.jar \
  acsContainerServices.jar \
@@ -56,6 +57,7 @@ acs.jars.required  = acsalarmSchemaBindings.jar \
  NotificationServiceMC.jar \
  NotifyExt.jar \
  NotifyMonitoringExt.jar \
- Monitor_Types.jar
+ Monitor_Types.jar \
+ slf4j-acs.jar \
+ slf4j-api-1.5.8.jar
  
-            
