Added a test for the AlarmSourceImpl
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@155158 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jacsalarm/test/Makefile
+++ b/LGPL/CommonSoftware/jacsalarm/test/Makefile
@@ -81,7 +81,7 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         = ThePrologue alarmsMapTest alarmSenderTest
+SCRIPTS         = ThePrologue alarmsMapTest alarmSenderTest alarmSourceTest
 SCRIPTS_L       =
 
 #
