package ordered to avoid duplications
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@155194 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/src/project.properties
@@ -17,56 +17,53 @@ acs.jars.plugin=alma.acs.jars
 ## The list of ACS/ALMA jars required by this RCP
 ## These jars must be found in INTROOT/ACSROOT/JACORB_HOME
 acs.jars.required  = \
-  cdbDAL.jar \
-  jcont.jar \
-  JavaContainerError.jar \
-  acsContainerServices.jar \
-  acserrj.jar \
-  cdbErrType.jar \
+  acsalarmSchemaBindings.jar \
+  acscomponent.jar \
   acserr.jar \
-  CDB.jar \
-  cdbjDAL.jar \
+  acserrj.jar \
   acsjlog.jar \
+  acsjms.jar \
+  acsnc.jar \
+  acsncErrType.jar \
+  acsAlarmClients.jar \
+  acsAlarmService.jar \
+  acsASsources.jar \
+  acsContainerServices.jar \
+  acsErrTypeAlarmSourceFactory.jar \
+  alarmsysteminterface.jar \
+  avalon-framework.jar \
+  AcsAlarmSystem.jar \
+  AcsNCTraceLogLTS.jar \
+  ACSErrTypeCommon.jar \
+  ACSErrTypeCORBA.jar \
+  ACSErrTypeJavaNative.jar \
+  ACSJMSMessageEntity.jar \
+  AlarmSourceSchemaBindings.jar \
+  AlarmSystem.jar \
+  castor.jar \
+  cdbjDAL.jar \
+  cdbDAL.jar \
+  cdbErrType.jar \
+  cmwmom.jar \
+  commons-logging-1.1.1.jar \
+  CDB.jar \
+  jacorb.jar \
+  jcont.jar \
+  jcontnc.jar \
+  jms.jar \
+  jACSUtil.jar \
+  JavaContainerError.jar \
+  laserclient.jar \
+  laserconsole.jar \
+  lasercore.jar \
+  laserutil.jar \
+  log4j-1.2.15.jar \
+  logging_idl.jar \
+  logkit.jar \
   maci.jar \
   maciSchemaBindings.jar \
-  logging_idl.jar \
-  jacorb.jar \
-  ACSErrTypeCommon.jar \
-  castor.jar \
-  jACSUtil.jar \
-  avalon-framework.jar \
-  logkit.jar \
   maciErrType.jar \
-  acsASsources.jar \
-  acsErrTypeAlarmSourceFactory.jar \
-  cmwmom.jar \
-  jms.jar \
-  log4j-1.2.15.jar \
-  acsAlarmClients.jar \
-  jcontnc.jar \
-  acsnc.jar \
-  acscomponent.jar \
-  alarmsysteminterface.jar \
-  acsAlarmClients.jar \
-  acsncErrType.jar \
-  ACSErrTypeJavaNative.jar \
-  NotifyMonitoringExt.jar \
-  ACSErrTypeCORBA.jar \
-  NotifyMonitoringExt.jar \
   NotifyExt.jar \
-  AcsNCTraceLogLTS.jar \
-  acsjms.jar \
-  ACSJMSMessageEntity.jar \
-  xercesImpl.jar \
-  commons-logging-1.1.1.jar \
-  castor.jar \
-  laserutil.jar \
-  laserclient.jar \
-  maciErrType.jar \
-  lasercore.jar \
-  acsAlarmService.jar \
-  AcsAlarmSystem.jar \
-  AlarmSystem.jar \
-  laserconsole.jar \
+  NotifyMonitoringExt.jar \
   selector-1.1.jar \
-  acsalarmSchemaBindings.jar
+  xercesImpl.jar
