Changes for COMP-5364 for using GCC 4.4 to build ACS.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@156473 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gmp/src/Makefile
+++ b/LGPL/Tools/gmp/src/Makefile
@@ -49,6 +49,7 @@ check:  unpack config
 unpack:
 	@if [ ! -d gmp-$(GMP_VER) ]; then \
            tar zxf gmp-$(GMP_VER).tar.gz; \
+           patch gmp-$(GMP_VER)/gmp-impl.h < gmp-impl.patch; \
         fi
 config: unpack
 	@cd gmp-$(GMP_VER) && \
