--- a/LGPL/CommonSoftware/monitoring/monblobber/src/Makefile
+++ b/LGPL/CommonSoftware/monitoring/monblobber/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.2 2011/06/03 22:29:54 vgonzale Exp $"
+# "@(#) $Id: Makefile,v 1.3 2011/07/01 09:04:49 hsommer Exp $"
 #
 # Makefile of ........
 #
@@ -161,7 +161,7 @@ ASCII_TO_MIF =
 #
 # other files to be installed
 #----------------------------
-INSTALL_FILES = ../lib/activemq-all-5.4.1.jar
+INSTALL_FILES =
 
 #
 # list of all possible C-sources (used to create automatic dependencies)
