--- a/LGPL/CommonSoftware/bulkDataNT/src/Makefile
+++ b/LGPL/CommonSoftware/bulkDataNT/src/Makefile
@@ -16,7 +16,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.4 2011/07/25 13:51:00 bjeram Exp $"
+# "@(#) $Id: Makefile,v 1.5 2011/07/26 09:18:11 rtobar Exp $"
 #
 # Makefile of ........
 #
@@ -66,7 +66,7 @@ xxxxx_LIBS      =
 #
 # Includes (.h) files (public only)
 # ---------------------------------
-INCLUDES        =
+INCLUDES        = bulkDataNTBase.h bulkDataNTCallback.h bulkDataNTDDS.h bulkDataNTDDSPublisher.h bulkDataNTDDSSubscriber.h bulkDataNTReaderListener.h bulkDataNTReceiverFlow.h bulkDataNTReceiver.h bulkDataNTReceiver.i bulkDataNTReceiverImpl.h bulkDataNTReceiverImpl.i bulkDataNTReceiverStream.h bulkDataNTReceiverStream.i bulkDataNTSenderFlow.h bulkDataNTSender.h bulkDataNTSenderImpl.h bulkDataNTSenderStream.h bulkDataNTStream.h
 
 #
 # Libraries (public and local)
