Renamed to ACS_laser_alarm-clients
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@159256 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/alarm-clients/.project
+++ b/LGPL/CommonSoftware/ACSLaser/alarm-clients/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ACS_alarm-clients</name>
+	<name>ACS_laser_alarm-clients</name>
 	<comment></comment>
 	<projects>
 	</projects>
